Added past problems and solutions

--- a/Problems/The minimum value of an array/task-info.yaml
+++ b/Problems/The minimum value of an array/task-info.yaml
@@ -9,6 +9,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/learn/step/1936
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/2135
+status: Failed
 record: -1
