--- a/Problems/Cyclically shifting elements/task-info.yaml
+++ b/Problems/Cyclically shifting elements/task-info.yaml
@@ -3,12 +3,15 @@ files:
 - name: src/Main.java
   visible: true
   text: |-
+    import java.util.Scanner;
+
     class Main {
         public static void main(String[] args) {
+            Scanner scanner = new Scanner(System.in);
             // put your code here
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/learn/step/1936
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/2142
+status: Solved
 record: -1
